[package]
name = "compute-module"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1"

[lib]
crate-type = ['cdylib']
[profile.release]
opt-level = 3
